# mesoLTM

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  NOTICE  README.md  cliff.toml  context7.json  index.html  mkdocs.yml  mkdocs_hooks.py  objects.inv  pyproject.toml  sitemap.xml
.ai/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  PROGRESS.md  README.md
.claude/: settings.json
.claude/hooks/: ai-tracking-reminder.sh
.github/workflows/: build.yml  docs.yml  docs_build.yml  docs_release.yml  examples.yml  format.yml  lint.yml  release.yml  test.yml  typecheck.yml
.serena/: project.yml
.serena/memories/: ai_tracking_system.md  code_style_and_conventions.md  codebase_structure.md  pending_zenodo_doi.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tools_and_skills.md
about/changelog/: index.html
about/citation/: index.html
about/license/: index.html
ai-docs/: api-reference.md  gotchas.md  index.md  installation.md  metrics.md  model.md  networks.md  plugins.md  quickstart.md  scenarios-cli.md  simulation.md  vehicles-and-routing.md  visualization.md
docs/: MODEL_CHANGES.md  index.md
docs/about/: changelog.md  citation.md  license.md
docs/getting-started/: installation.md  quickstart.md  running-a-scenario.md
docs/guide/: animations.md  building-networks.md  examples.md  metrics.md  plugins.md  routing.md  stepping-and-injection.md  visualizations.md
docs/model/: deviations-from-the-paper.md  links-and-fd.md  networks-and-connectors.md  nodes.md  overview.md  simulation-loop.md  vehicles-and-routing.md
docs/reference/: core.md  demand.md  index.md  io-cli.md  metrics.md  network.md  nodes.md  plugins.md  recording.md  routing.md  visualizations.md
examples/: _common.py  adaptive_rerouting_intersection.py  bottleneck_access_policy.py  congestion_aware_routing.py  freeway_onramp.py  grid_demo.py  grid_visualization.py  multi_trip_injection.py  paper_validation.py  parallel_links_demo.py  rerouting_demo.py  ride_hail_dispatch.py  scenario.json  vehicle_metrics_demo.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/running-a-scenario/: index.html
guide/animations/: index.html
guide/building-networks/: index.html
guide/examples/: index.html
guide/metrics/: index.html
guide/plugins/: index.html
guide/routing/: index.html
guide/stepping-and-injection/: index.html
guide/visualizations/: index.html
model/deviations-from-the-paper/: index.html
model/links-and-fd/: index.html
model/networks-and-connectors/: index.html
model/nodes/: index.html
model/overview/: index.html
model/simulation-loop/: index.html
model/vehicles-and-routing/: index.html
reference/: index.html
reference/core/: index.html
reference/demand/: index.html
reference/io-cli/: index.html
reference/metrics/: index.html
reference/network/: index.html
reference/nodes/: index.html
reference/plugins/: index.html
reference/recording/: index.html
reference/routing/: index.html
reference/visualizations/: index.html
search/: search_index.json
src/mesoltm/: __init__.py  __main__.py  cli.py  recording.py
src/mesoltm/core/: __init__.py  base_link.py  connector_link.py  ids.py  link.py  priorities.py  simulation.py  vehicle.py
src/mesoltm/demand/: __init__.py  demand.py
src/mesoltm/io/: __init__.py  scenario.py
src/mesoltm/metrics/: __init__.py  trips.py
src/mesoltm/network/: __init__.py  builders.py  network.py  state.py
src/mesoltm/plugins/: __init__.py  plugin.py
src/mesoltm/routing/: __init__.py  policy.py  shortest_path.py
src/mesoltm/tests/: __init__.py  test_animation.py  test_cli.py  test_core.py  test_injection.py  test_metrics.py  test_movement_demand.py  (+9 more)
(+12 files in other folders)
